--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.mvc.view.prefix: /
 spring.mvc.view.suffix: .jsp
+
+spring.messages.encoding=UTF-8
