--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
 
 
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
