--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/serwis?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = 
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.mvc.view.prefix: /
 spring.mvc.view.suffix: .jsp
